tests/baselines/reference/exportAssignmentInterface.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
exportAssignmentInterface_B.ts(5,17): error TS2454: Variable 'i' is used before being assigned.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== exportAssignmentInterface_B.ts (1 errors) ====
    import I1 = require("exportAssignmentInterface_A");
    
    var i: I1;
    
    var n: number = i.p1;
                    ~
!!! error TS2454: Variable 'i' is used before being assigned.
==== exportAssignmentInterface_A.ts (0 errors) ====
    interface A {
    	p1: number;
    }
    
    export = A;
    